# CloudLens

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
cloudlens/: __init__.py  analysis.py  api.py  errors.py  filters.py  format.py  logs.py  metrics.py  runtime.py  server.py  share.py  themes.py  traces.py  tui.py
watch/: README.md  context.go  detail.go  gcp.go  go.mod  go.sum  help.go  keys.go  main.go  model.go  overlay.go  picker.go  run.go  share.go  theme.go  trace.go
