[project]
name = "cloudlens"
version = "0.5.1"
description = "CloudLens — MCP server for Cloud Run observability (logs, metrics, traces, errors, deployments)"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "mcp>=1.2.0",
    "google-cloud-logging>=3.10.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-monitoring>=2.19.0",
    "google-cloud-trace>=1.13.0",
    "google-cloud-error-reporting>=1.10.0",
]

[project.scripts]
cloudlens = "cloudlens.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudlens"]
